Added background hover color to mimic lab video.

--- a/client/lab_3/style.css
+++ b/client/lab_3/style.css
@@ -262,5 +262,5 @@ div.carousel {
 
 .prev:hover,
 .next:hover {
-  /* Pick a good background colour for your hover pseudoclass */
+  background-color: rgb(246, 169, 93);
 }
