--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -92,8 +92,8 @@ form {
   /* this will push other blocks out of the way */
 
   /* colors */
-  background-color: #ffe08a;
-  color: #4a4a4a;
+  background-color: #940505;
+  color: #f1f1f1;
 
   /* shapes */
   border-radius: 6px;
@@ -128,18 +128,18 @@ form {
 }
 
 .left_section {
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #0baf70;
   flex: 0 1 auto;
   margin: 1rem;
   padding: 1.5rem;
 }
 
 .right_section {
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: #055694;
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
-  max-width: 450px;
+  /* max-width: 450px; */
   display: flex;
   flex-flow: column;
 }
@@ -153,13 +153,13 @@ form {
 .footer {
   flex-shrink: 0;
   padding: 1rem;
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #ffd700;
   font-size: 1.2rem;
   font-weight: 600;
 }
 
 .footer a {
-  color: rgba(255, 224, 138, 1);
+  color: #940505;
   text-decoration: underline;
 }
 
@@ -172,7 +172,7 @@ form {
   /* Hue, saturation, luminosity, alpha */
   background-color: hsla(0, 0%, 90%, 0.15);
   /* red, green, blue, alpha */
-  color: rgb(246, 169, 93);
+  color: rgb(25, 197, 236);
   text-decoration: none;
 }
 
@@ -303,5 +303,8 @@ form label {
   /* check it out by using your developer tools to shrink your screen-size */
   .container {
     background-color: rgba(204, 8, 162, 0.65);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
