--- a/client/lab_6/style.css
+++ b/client/lab_6/style.css
@@ -295,12 +295,18 @@
 	display: block; /* this turns the label text into a box we can set margins on */
 	margin-bottom: 0.5rem;
 	}
+	
 .lds-ellipsis {
     display: inline-block;
     position: relative;
     width: 80px;
     height: 80px;
   }
+
+  .lds-ellipsis_hidden {
+	display: hidden;
+  }
+
   .lds-ellipsis div {
     position: absolute;
     top: 33px;
